# chatlogtoeml

./: .gitignore  CI-IMPL.plan  DEDUPE_INGEST_PLAN.md  DEV_PLAN.md  README.md  adiumToEml.py  adium_convert.sh  conv_to_eml.py  conversation.py  converted.css  imessage_json.py  ios_convert.sh  ios_multi_convert.sh  jsonToEml.py  pyproject.toml
.copilot/: db-ingest-plan.md  ndjson-feature-plan.md  ndjson-test-summary-2026-03-15.md  repo_memory.json  verify_ndjson_eml.py  verify_ndjson_eml_relaxed.py
.github/: copilot-instructions.md  copilot-memory.md
.github/workflows/: ci.yml  security.yml
chatlogtoeml/: __init__.py  conv_to_eml.py  conversation.py  multidb_ingest.py  normalize.py
chatlogtoeml/cli/: __init__.py  apple_db.py  common.py  legacy.py  ndjson.py
chatlogtoeml/parsers/: __init__.py  addressbook.py  adium_html.py  adium_xml.py  apple_db.py  imessage_common.py  imessage_json.py
docs/: APPLE_DB_NOTES.md  CI-IMPL.plan  EML_FORMAT_ICD.md  device-extractor-design.md
extras/: emlToMbox.py
extras/adium/: README-extras.md  reprocess_list.sh
extras/ios/: device-extractor-design.md
samples/: APPLE_DB_NOTES.md  README.md  SAMPLEDATA.md
samples/blob_cases/ios/: sms_blob_cases.db  sms_blob_cases_expected.json
samples/blob_cases/macos/: chat_blob_cases.db
samples/ios/: .gitignore  sms.db
samples/macos/: chat.db
samples/ndjson/: .gitignore  sample.ndjson
samples/ndjson/synthetic/: test_synthetic.ndjson
samples/output/db_to_eml_ios/: alice_example_com_2001-01-21_0000.eml  bob_example_com_2001-01-21_0000.eml  me_2001-01-21_0000.eml
testdata/ios/: sms.db
tests/: __init__.py  test_apple_db.py  test_conv_to_eml.py  test_fakedomain.py  test_imessage_json.py  test_multidb_ingest.py
tools/: generate_blob_case_fixtures.py  generate_ios_smsdb_fixture.py  generate_macos_chatdb_fixture.py
(+4 files in other folders)
